更新介紹頁。

--- a/doc.html
+++ b/doc.html
@@ -14,8 +14,8 @@
         <meta name="description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta name="keywords" content="QuickUI, JavaScript, Frontend Rendering Framework, Virtual DOM, Efficient Rendering, Auto Update, UI Tools, Lightweight, Rapid Development, Pardn Chiu, 前端渲染框架, 虛擬 DOM, 高效渲染, 自動更新, UI工具, 輕量化, 快速開發, 邱敬幃">
         <meta name="author" content="邱敬幃 Pardn Chiu">
-        <link rel="author" href="https://pardn.ltd">
-        <link rel="canonical" href="https://pardn.ltd/QuickUI/">
+        <link rel="author" href="https://pardn.io">
+        <link rel="canonical" href="https://quickui.pardn.io/">
 
         <!-- Favicon -->
         <link rel="icon" href="./static/image/logo.png" type="image/x-icon">
@@ -24,7 +24,7 @@
         <meta property="og:title" content="QuickUI 文檔 - 輕量化網站前端框架 - 邱敬幃">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="og:image" content="./static/image/website.jpg">
-        <meta property="og:url" content="https://pardn.ltd/QuickUI/">
+        <meta property="og:url" content="https://quickui.pardn.io/">
         <meta property="og:site_name" content="QuickUI">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="zh_TW">
@@ -34,7 +34,7 @@
         <meta property="twitter:title" content="QuickUI 文檔 - 輕量化網站前端框架 - 邱敬幃">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="twitter:image" content="./static/image/website.jpg">
-        <meta property="twitter:url" content="https://pardn.ltd/QuickUI/">
+        <meta property="twitter:url" content="https://quickui.pardn.io/">
 
         <!-- Google Verification -->
         <meta name="google-site-verification" content="YQQ2f6AchR8dcb55Az2BYd_mw4TrP0J1RApD-v2v65Y">
@@ -76,11 +76,11 @@
             "@type": "WebPage",
             "name": "QuickUI - 輕量化網站前端框架 - 邱敬幃",
             "description": "QuickUI 是一款基於 JavaScript 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於提升效能與開發效率，適合用於複雜應用場景。",
-            "url": "https://pardn.ltd/QuickUI/",
+            "url": "https://quickui.pardn.io/",
             "creator": {
                 "@type": "Person",
                 "name": "邱敬幃 Pardn Chiu",
-                "url": "https://pardn.ltd"
+                "url": "https://pardn.io"
             },
             "datePublished": "2024-11-29",
             "dateModified": "2024-11-29",
@@ -88,87 +88,87 @@
                 {
                     "@type": "WebPageElement",
                     "name": "安裝與使用 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html"
+                    "url": "https://quickui.pardn.io/doc.html"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "安裝與使用 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=installation"
+                    "url": "https://quickui.pardn.io/doc.html?tag=installation"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "屬性概覽 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=overview"
+                    "url": "https://quickui.pardn.io/doc.html?tag=overview"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "文字替換 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=text"
+                    "url": "https://quickui.pardn.io/doc.html?tag=text"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "插入區塊 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=block"
+                    "url": "https://quickui.pardn.io/doc.html?tag=block"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "迴圈渲染 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=forloop"
+                    "url": "https://quickui.pardn.io/doc.html?tag=forloop"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "條件渲染 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=ifelse"
+                    "url": "https://quickui.pardn.io/doc.html?tag=ifelse"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "模板渲染 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=model"
+                    "url": "https://quickui.pardn.io/doc.html?tag=model"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "雙向綁定 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=binding"
+                    "url": "https://quickui.pardn.io/doc.html?tag=binding"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "事件偵測 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=event"
+                    "url": "https://quickui.pardn.io/doc.html?tag=event"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "CSS設置 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=css"
+                    "url": "https://quickui.pardn.io/doc.html?tag=css"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "可用函式 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=function"
+                    "url": "https://quickui.pardn.io/doc.html?tag=function"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "懶加載 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=lazyload"
+                    "url": "https://quickui.pardn.io/doc.html?tag=lazyload"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "模板渲染 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=i18n"
+                    "url": "https://quickui.pardn.io/doc.html?tag=i18n"
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "生命週期 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=lifecircle""
+                    "url": "https://quickui.pardn.io/doc.html?tag=lifecircle""
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "資料獲取 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=data""
+                    "url": "https://quickui.pardn.io/doc.html?tag=data""
                 },
                 {
                     "@type": "WebPageElement",
                     "name": "即將棄用 - QuickUI",
-                    "url": "https://pardn.ltd/QuickUI/doc.html?tag=DEPRECATION""
+                    "url": "https://quickui.pardn.io/doc.html?tag=DEPRECATION""
                 }
             ]
         }
