--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+
+    Copyright 2024 Pardn Ltd 帕登國際有限公司.
+    Created by Pardn Chiu 邱敬幃.
+    Email: dev@pardn.io
+
+-->
 <!DOCTYPE html>
 <html lang="zh-Hans-TW">
 
@@ -18,12 +25,12 @@
         <link rel="canonical" href="https://quickui.pardn.io/">
 
         <!-- Favicon -->
-        <link rel="icon" href="./static/image/logo.png" type="image/x-icon">
+        <link rel="icon" href="https://quickui.pardn.io/static/image/logo.png" type="image/x-icon">
 
         <!-- Open Graph -->
         <meta property="og:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
-        <meta property="og:image" content="./static/image/website.jpg">
+        <meta property="og:image" content="https://quickui.pardn.io/static/image/website.jpg">
         <meta property="og:url" content="https://quickui.pardn.io/">
         <meta property="og:site_name" content="QuickUI">
         <meta property="og:type" content="website">
@@ -33,7 +40,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
         <meta property="twitter:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
-        <meta property="twitter:image" content="./static/image/website.jpg">
+        <meta property="twitter:image" content="https://quickui.pardn.io/static/image/website.jpg">
         <meta property="twitter:url" content="https://quickui.pardn.io/">
 
         <!-- Google Verification -->
@@ -71,25 +78,59 @@
         {
             "@context": "https://schema.org",
             "@type": "WebPage",
-            "name": "QuickUI - 輕量化網站前端框架 - 邱敬幃",
-            "description": ""QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。"",
-            "url": "https://quickui.pardn.io/",
+            "datePublished": "2024-11-29",
+            "dateModified": "2024-12-20",
+            "inLanguage": "zh-TW",
+            "name": {
+                "@language": "zh-TW",
+                "@value": "QuickUI - 輕量化網站前端框架 - 邱敬幃"
+            },
+            "alternateName": {
+                "@language": "en",
+                "@value": "QuickUI - Lightweight Frontend Framework - Pardn Chiu"
+            },
+            "description": {
+                "@language": "zh-TW",
+                "@value": "QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。"
+            },
+            "alternateDescription": {
+                "@language": "en",
+                "@value": "QuickUI is a lightweight JavaScript framework with native APIs, featuring virtual DOM, efficient data monitoring, and automatic updates to streamline development and boost performance."
+            },
+            "url": [
+                "https://quickui.pardn.io/",
+                "https://quickui.pardn.io/?lang=zh",
+                "https://quickui.pardn.io/?lang=en"
+            ],
             "creator": {
                 "@type": "Person",
-                "name": "邱敬幃 Pardn Chiu",
-                "url": "https://pardn.io"
+                "name": [
+                    {
+                        "@language": "zh-TW",
+                        "@value": "邱敬幃"
+                    },
+                    {
+                        "@language": "en",
+                        "@value": "Pardn Chiu"
+                    }
+                ],
+                "url": "https://pardn.io/",
+                "sameAs": [
+                    "https://github.com/pardnchiu"
+                ],
+                "email": "dev@pardn.io"
             },
-            "image": "./static/image/website.jpg"
+            "image": "https://quickui.pardn.io/static/image/website.jpg"
         }
         </script>
     </head>
 
-    <body id="app">
+    <body id="app" :animation="fade-in">
         <section class="left" data-index="0">
-            <a href="./index.html">
+            <a :href="./index.html?lang={{ lang }}">
                 <i class="fa-solid fa-house"></i>
             </a>
-            <a href="./doc.html">
+            <a :href="./doc.html?lang={{ lang }}">
                 <i class="fa-brands fa-readme"></i>
             </a>
             <a href="https://github.com/pardnchiu/QuickUI/releases" target="_blank">
@@ -101,7 +142,7 @@
                 <img src="./static/image/logo.svg" alt="">
                 <section>
                     <h1><span>Quick</span><span>UI</span></h1>
-                    <span>輕量化網頁前端框架</span>
+                    <span>{{ i18n.title }}</span>
                 </section>
             </section>
             <section class="button">
@@ -113,103 +154,80 @@
                     <i class="fa-brands fa-npm"></i>
                     npm
                 </a>
+                <span></span>
+                <a :href="./license.html?lang={{ lang }}">
+                    <i class="fa-solid fa-scale-balanced"></i>
+                    LICENSE
+                </a>
             </section>
-
             <section class="intro" data-index="0">
                 <div>
                     <button @click="changeIntro">
                         <p>01</p>
-                        <strong>Lightweight・輕量化</strong>
+                        <strong>{{ i18n.block_0_button }}</strong>
                     </button>
                     <section>
-                        <strong>輕量化與無依賴性</strong>
-                        <p>以純 JavaScript 和原生 API 為核心，實現了完全無依賴的框架設計。<br>
-                            相較於傳統框架，其小巧的體積和簡單的結構有效降低了網頁應用的資源開銷。<br>
-                            無需繁重的第三方庫支持，使得在各種運行環境下皆能保證高效穩定，特別適合對流量敏感的移動端場景。</p>
+                        <strong>{{ i18n.block_0_title }}</strong>
+                        <p :html="i18n.block_0_content"></p>
                     </section>
                 </div>
                 <div>
                     <button @click="changeIntro">
                         <p>02</p>
-                        <strong>Efficient・高效渲染</strong>
+                        <strong>{{ i18n.block_1_button }}</strong>
                     </button>
                     <section>
-                        <strong>高效渲染與資料監控</strong>
-                        <p>引入虛擬 DOM 技術重構了渲染邏輯，實現了細粒度的資料監控與更新。<br>
-                            框架會自動檢測資料的變化，並通過最小的資源消耗即時更新視圖，避免不必要的 DOM 操作。<br>
-                            此設計大幅提升了性能，確保框架能輕鬆應對高互動性應用的需求，並提供用戶更流暢的體驗。</p>
+                        <strong>{{ i18n.block_1_title }}</strong>
+                        <p :html="i18n.block_1_content"></p>
                     </section>
                 </div>
                 <div>
                     <button @click="changeIntro">
                         <p>03</p>
-                        <strong>Simple・簡單語法</strong>
+                        <strong>{{ i18n.block_2_button }}</strong>
                     </button>
                     <section>
-                        <strong>簡潔易用的語法</strong>
-                        <p>提供直觀易懂的語法設計，讓開發者能快速熟悉並應用。<br>
-                            支援 <code>{{value}}</code>、<code>:for</code> 和 <code>:if</code> 等語法，極大程度簡化了常見的開發需求：<br>
-                            - 資料綁定：直接插入資料至視圖，並隨資料變化自動更新。<br>
-                            - 條件渲染：以簡潔的語法實現分支邏輯控制。<br>
-                            - 迴圈渲染：高效處理列表與多層數據結構，減少冗餘代碼。</p>
+                        <strong>{{ i18n.block_2_title }}</strong>
+                        <p :html="i18n.block_2_content"></p>
                     </section>
                 </div>
                 <div>
                     <button @click="changeIntro">
                         <p>04</p>
-                        <strong>Flexible・彈性兼容</strong>
+                        <strong>{{ i18n.block_3_button }}</strong>
                     </button>
                     <section>
-                        <strong>彈性與兼容性強</strong>
-                        <p>支持多層嵌套和自定義樣式設置，無論是單頁應用還是多頁系統，皆能靈活適配。<br>
-                            框架內建完整的生命週期控制，讓開發者能精確掌握組件行為，並通過內置的擴展功能滿足複雜應用場景需求。<br>
-                            高效的兼容性設計，讓其成為多端開發的理想選擇。</p>
+                        <strong>{{ i18n.block_3_title }}</strong>
+                        <p :html="i18n.block_3_content"></p>
                     </section>
                 </div>
             </section>
 
             <section class="block">
-                <h2>核心功能</h2>
+                <h2>{{ i18n.feature }}</h2>
                 <div>
-                    <strong>Text・文字替換</strong>
-                    <p>提供高效的文字替換能力：<br>
-                        > <code>{{value}}</code>：動態插入資料至 HTML 元素，並隨資料變更自動更新。<br>
-                        > <code>:html</code>：支持插入多段文字或嵌套的 HTML 結構，滿足更多樣化的視圖需求。</p>
+                    <strong>{{ i18n.subblock_0_title }}</strong>
+                    <p :html="i18n.subblock_0_content"></p>
                 </div>
                 <div>
-                    <strong>Conditional・條件渲染</strong>
-                    <p>透過條件語法實現視圖的靈活顯示：<br>
-                        > <code>:if</code>：僅在條件成立時顯示元素。<br>
-                        > <code>:else-if</code>：用於處理多條件分支。<br>
-                        > <code>:else</code>：處理所有不符合條件的場景，簡化複雜的邏輯控制。</p>
+                    <strong>{{ i18n.subblock_1_title }}</strong>
+                    <p :html="i18n.subblock_1_content"></p>
                 </div>
                 <div>
-                    <strong>Loop・迴圈渲染</strong>
-                    <p>高效處理列表和多層數據結構的渲染：<br>
-                        > 簡單迴圈：使用 <code>item in items</code> 遍歷數據清單。<br>
-                        > 多層結構：支持如 <code>(key, value) in object</code> 的嵌套結構渲染。<br>
-                        > 索引支持：獲取數據索引，動態生成唯一標識或屬性。</p>
+                    <strong>{{ i18n.subblock_2_title }}</strong>
+                    <p :html="i18n.subblock_2_content"></p>
                 </div>
                 <div>
-                    <strong>Binding・雙向綁定</strong>
-                    <p>通過 <code>:model</code> 實現表單元素與資料的即時同步：<br>
-                        > 自動更新：用戶輸入時，資料即時同步。<br>
-                        > 簡化流程：無需額外的事件監聽器或邏輯處理。<br>
-                        > 多元支持：適用於 <code>input</code>、<code>textarea</code>、<code>select</code> 等多種表單元素。</p>
+                    <strong>{{ i18n.subblock_3_title }}</strong>
+                    <p :html="i18n.subblock_3_content"></p>
                 </div>
                 <div>
-                    <strong>CSS・快速設置 CSS</strong>
-                    <p>提供直觀易用的 CSS 快速設置語法，讓開發者專注於功能實現而非樣式細節：<br>
-                        > 基礎樣式支持：例如 <code>:padding</code>、<code>:margin</code>、<code>:border</code> 等，快速設定元素間距與邊框。<br>
-                        > 背景設置：如 <code>:background-color</code>、<code>:background-image</code> 支持快速設置背景顏色或圖片。<br>
-                        > 動態屬性：可綁定數據動態修改樣式，適應各種交互需求。</p>
+                    <strong>{{ i18n.subblock_4_title }}</strong>
+                    <p :html="i18n.subblock_4_content"></p>
                 </div>
                 <div>
-                    <strong>Event・事件綁定</strong>
-                    <p>透過 <code>@[event]</code> 語法，QuickUI 支持各種 DOM 事件的快捷綁定，實現靈活的互動邏輯：<br>
-                        > 範圍廣泛：支援 <code>@click</code>、<code>@input</code>、<code>@change</code> 等常用事件類型。<br>
-                        > 自定義事件處理：可綁定開發者定義的回調函數。<br>
-                        > 高效操作：避免手動編寫冗長的事件監聽代碼，提升開發效率。</p>
+                    <strong>{{ i18n.subblock_5_title }}</strong>
+                    <p :html="i18n.subblock_5_content"></p>
                 </div>
             </section>
             <!--  -->
@@ -219,10 +237,34 @@
                 <p>&copy; 2024</p>
             </footer>
         </section>
+        <a :href="./index.html?lang={{ change }}" class="lang">
+            <i class="fa-solid fa-globe"></i>
+            <span>{{ change }}</span>
+        </a>
         <script>
             document.addEventListener("DOMContentLoaded", _ => {
+                const url = new URL(location.href);
+                const currentLanguage = navigator.language || navigator.userLanguage;
+                let lang = url.searchParams.get("lang");
+                let isZh = /^zh/i.test(currentLanguage);
+
+                if (lang != null) {
+                    isZh = /^zh/i.test(lang);
+                };
+
+                lang = isZh ? "zh" : "en";
+
                 const app = new QUI({
                     id: "app",
+                    i18n: {
+                        zh: "./static/i18n/index/zh.json",
+                        en: "./static/i18n/index/en.json",
+                    },
+                    i18nLang: lang,
+                    data: {
+                        lang: lang,
+                        change: isZh ? "en" : "zh"
+                    },
                     event: {
                         changeIntro: e => {
                             const _this = e.target;
