更改介紹頁靜態檔案，避免LICENSE衝突。

--- a/agreement.html
+++ b/agreement.html
@@ -22,7 +22,7 @@
         <meta name="keywords" content="QuickUI, JavaScript, Frontend Rendering Framework, Virtual DOM, Efficient Rendering, Auto Update, UI Tools, Lightweight, Rapid Development, Pardn Chiu, 前端渲染框架, 虛擬 DOM, 高效渲染, 自動更新, UI工具, 輕量化, 快速開發, 邱敬幃">
         <meta name="author" content="邱敬幃 Pardn Chiu">
         <link rel="author" href="https://pardn.io">
-        <link rel="canonical" href="https://quickui.pardn.io/license.html">
+        <link rel="canonical" href="https://quickui.pardn.io/agreement.html">
 
         <!-- Favicon -->
         <link rel="icon" href="https://quickui.pardn.io/static/image/logo.png" type="image/x-icon">
@@ -31,7 +31,7 @@
         <meta property="og:title" content="QuickUI 授權協議 - 輕量化網站前端框架 - 邱敬幃">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="og:image" content="https://quickui.pardn.io/static/image/website.jpg">
-        <meta property="og:url" content="https://quickui.pardn.io/license.html">
+        <meta property="og:url" content="https://quickui.pardn.io/agreement.html">
         <meta property="og:site_name" content="QuickUI">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="zh_TW">
@@ -41,7 +41,7 @@
         <meta property="twitter:title" content="QuickUI 授權協議 - 輕量化網站前端框架 - 邱敬幃">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="twitter:image" content="https://quickui.pardn.io/static/image/website.jpg">
-        <meta property="twitter:url" content="https://quickui.pardn.io//license.html">
+        <meta property="twitter:url" content="https://quickui.pardn.io//agreement.html">
 
         <!-- Google Verification -->
         <meta name="google-site-verification" content="YQQ2f6AchR8dcb55Az2BYd_mw4TrP0J1RApD-v2v65Y">
@@ -101,9 +101,9 @@
                     "@value": "QuickUI is a lightweight JavaScript framework with native APIs, featuring virtual DOM, efficient data monitoring, and automatic updates to streamline development and boost performance."
                 },
                 "url": [
-                    "https://quickui.pardn.io/license.html",
-                    "https://quickui.pardn.io/license.html?lang=zh",
-                    "https://quickui.pardn.io/license.html?lang=en"
+                    "https://quickui.pardn.io/agreement.html",
+                    "https://quickui.pardn.io/agreement.html?lang=zh",
+                    "https://quickui.pardn.io/agreement.html?lang=en"
                 ],
                 "creator": {
                     "@type": "Person",
@@ -154,7 +154,7 @@
                 <p>&copy; 2024</p>
             </footer>
         </section>
-        <a :href="./license.html?lang={{ change }}" class="lang">
+        <a :href="./agreement.html?lang={{ change }}" class="lang">
             <i class="fa-solid fa-globe"></i>
             <span>{{ change }}</span>
         </a>
