--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     npm
                 </a>
                 <span></span>
-                <a :href="./license.html?lang={{ lang }}">
+                <a :href="./agreement.html?lang={{ lang }}">
                     <i class="fa-solid fa-scale-balanced"></i>
                     LICENSE
                 </a>
