--- a/agreement.html
+++ b/agreement.html
@@ -123,11 +123,13 @@
                     ],
                     "email": "dev@pardn.io"
                 },
+                "image": "https://quickui.pardn.io/static/image/website.jpg",
             }
         </script>
     </head>
 
     <body id="app" :animation="fade-in">
+        <!--  -->
         <section class="left" data-index="">
             <a :href="./index.html?lang={{ lang }}">
                 <i class="fa-solid fa-house"></i>
@@ -143,6 +145,7 @@
                 <strong>QuickUI</strong>
             </a>
         </section>
+
         <section class="right">
             <section class="doc">
                 <section id="doc-body-content" class="body"></section>
@@ -150,14 +153,17 @@
             <!--  -->
             <footer>
                 <p>Created by <a href="https://github.com/pardnchiu" target="_blank">邱敬幃</a></p>
-                <p><a href="https://github.com/pardnchiu/QuickUI" target="_blank">QuickUI on GitHub</a></p>
+                <p><a href="https://github.com/pardnchiu/QuickUI" target="_blank">QuickUI</a> on GitHub</p>
+                <p>Render by <a href="https://nanomd.pardn.io" target="_blank">NanoMD</a></p>
                 <p>&copy; 2024</p>
             </footer>
         </section>
+        <!--  -->
         <a :href="./agreement.html?lang={{ change }}" class="lang">
             <i class="fa-solid fa-globe"></i>
             <span>{{ change }}</span>
         </a>
+        <!--  -->
         <script>
             document.addEventListener("DOMContentLoaded", _ => {
                 const url = new URL(location.href);
@@ -184,6 +190,8 @@
                     },
                     when: {
                         rendered: async _ => {
+                            let pre = "";
+
                             await fetch("./static/md/" + lang + "/license.md")
                                 .then(response => response.text())
                                 .then(data => {
@@ -201,12 +209,6 @@
                             });
 
                             editor.init(pre);
-
-                            // const target = document.querySelector("button[data-title='" + tag + "']");
-                            // target.click();
-                            // const tab = document.getElementById("doc-body-tab");
-                            // const index = tab.dataset.index = parseInt(0);
-                            // tab.children[index].click();
                         }
                     }
                 })
