--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <meta name="robots" content="index, follow">
 
         <!-- SEO 標題與描述 -->
-        <title>QuickUI - 輕量化網站前端框架 - 邱敬幃</title>
-        <meta name="title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <title>QuickUI - 輕量化網站前端框架 - 邱敬幃 Pardn Chiu</title>
+        <meta name="title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃 Pardn Chiu">
         <meta name="description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta name="keywords" content="QuickUI, JavaScript, Frontend Rendering Framework, Virtual DOM, Efficient Rendering, Auto Update, UI Tools, Lightweight, Rapid Development, Pardn Chiu, 前端渲染框架, 虛擬 DOM, 高效渲染, 自動更新, UI工具, 輕量化, 快速開發, 邱敬幃">
         <meta name="author" content="邱敬幃 Pardn Chiu">
@@ -28,7 +28,7 @@
         <link rel="icon" href="https://quickui.pardn.io/static/image/logo.png" type="image/x-icon">
 
         <!-- Open Graph -->
-        <meta property="og:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <meta property="og:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃 Pardn Chiu">
         <meta property="og:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="og:image" content="https://quickui.pardn.io/static/image/website.jpg">
         <meta property="og:url" content="https://quickui.pardn.io/">
@@ -38,7 +38,7 @@
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃">
+        <meta property="twitter:title" content="QuickUI - 輕量化網站前端框架 - 邱敬幃 Pardn Chiu">
         <meta property="twitter:description" content="QuickUI 是一款基於純 JavaScript 搭配原生 APIs 的輕量化網站前端框架，支援虛擬 DOM、高效數據監控與自動更新，專注於簡化開發流程並提升渲染效能。">
         <meta property="twitter:image" content="https://quickui.pardn.io/static/image/website.jpg">
         <meta property="twitter:url" content="https://quickui.pardn.io/">
@@ -83,7 +83,7 @@
             "inLanguage": "zh-TW",
             "name": {
                 "@language": "zh-TW",
-                "@value": "QuickUI - 輕量化網站前端框架 - 邱敬幃"
+                "@value": "QuickUI - 輕量化網站前端框架 - 邱敬幃 Pardn Chiu"
             },
             "alternateName": {
                 "@language": "en",
