更新介紹頁。

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 </section>
             </section>
 
-        <section :gap="0.5rem">
+        <section :display="flex" :gap="0.5rem">
             <img src="https://img.shields.io/badge/tag-JavaScript%20Library-bb4444" alt="">
             <img src="https://img.shields.io/github/size/pardnchiu/QuickUI/dist%2FQuickUI.js" alt="">
         </section>
-        <section :margin-top="-1.25rem" :gap="0.5rem">
+        <section :display="flex" :margin-top="-1rem" :gap="0.5rem">
             <a href="https://www.npmjs.com/package/@pardnchiu/quickui" target="_blank" :text-decoration="none">
                 <img src="https://img.shields.io/npm/v/@pardnchiu/quickui" alt="npm版本">
             </a>
